# rv32im_perf_model

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml~  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml  setup  xpackpath
perf_model/: instructions.py  perf_model_config.py  perf_model_rv32im.py  run.py  run_pm.py  utility.py
perf_model/backend/: LICENSE
perf_model/backend/isa/: RV32F_instructions.py  RV32M_instructions.py  __init__.py  b_type.py  constants.py  i_type.py  j_type.py  layout.py  r_type.py  s_type.py  u_type.py
perf_model/backend/utils/: __init__.py  int32.py  load_binary.py  mem_dict_gen.py  memnonic_dictonary.py  reg_names_util.py  utils.py
perf_model/compilation/: Makefile  linker_rv32.ld
perf_model/compilation/src/: sort100.c  sort200.c  sort300.c
perf_model/executables/pico_dnn/: deepautoencoder  ds_cnn  mobilenet_v1  resnet_v1_eembc
perf_model/executables/pico_dnn_tests/: test_activation  test_add  test_avg_pooling_2d  test_conv_1d  test_conv_2d  test_depthwise_conv_2d  test_gemm  test_tiled_gemm  test_vector_add
perf_model/executables/rv32i/: add.elf  addi.elf  and.elf  andi.elf  auipc.elf  beq.elf  bge.elf  bgeu.elf  blt.elf  bltu.elf  bne.elf  function_call.elf  gemm.elf  jal.elf  jalr.elf  lb.elf  lbu.elf  lh.elf  lhu.elf  loop_no_nesting.elf  lui.elf  lw.elf  or.elf  ori.elf  sb.elf  sh.elf  sll.elf  slli.elf  slt.elf  slti.elf  sltiu.elf  sltu.elf  sra.elf  srai.elf  srl.elf  srli.elf  sub.elf  sw.elf  xor.elf  xori.elf
perf_model/executables/rv32im/: div.elf  mul.elf  (+6 more)
tests/: test_instructions_simple.py  test_spm_utils.py
(+5 files in other folders)
