[project]
name = "perf-model"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["riscv-model>=0.6.6", "readelf>=1.0.1"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
]
